# FlamAssignment

./: .gitignore  CMakeLists.txt  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/assignmentflamrnd/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/jni/: image_processor.cpp  image_processor.h  jni_bridge.cpp
app/src/main/java/com/example/assignmentflamrnd/: FrameProcessor.java  GLRenderer.java  MainActivity.java
app/src/main/java/com/example/assignmentflamrnd/filters/: FilterManager.java
app/src/main/java/com/example/assignmentflamrnd/gl/: GLRenderer.java
app/src/main/java/com/example/assignmentflamrnd/jni/: FrameProcessor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/assignmentflamrnd/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
